<?xml version="1.0"?>
<package format="2">
  <name>tv_pkg</name>
  <version>1.0.0</version>
  <description>tv tasks</description>
  <maintainer email="rfarhetdinov@mail.ru">Ruslan Farkhetdinov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <export/>

</package>
